manifests/1-postgres.yml

# Criacao do deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-postgres
  namespace: ns-guess
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          resources:
            requests:
              cpu: "0.3"
              memory: "256Mi"
            limits:
              cpu: "0.5"
              memory: "512Mi"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pg-data
          ports:
            - containerPort: 5432
      volumes:
        - name: pg-data
          persistentVolumeClaim:
            claimName: pvc-postgres

---

# Criacao do service

apiVersion: v1
kind: Service
metadata:
  name: svc-postgres
  namespace: ns-guess
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
