manifests/2-backend.yml

# Criacao do Deploy

apiVersion: apps/v1
kind: Deployment
metadata:
  name: guess-backend
  namespace: ns-guess
spec:
  selector:
    matchLabels:
      app: guess-backend
  template:
    metadata:
      labels:
        app: guess-backend
    spec:
      containers:
        - name: guess-backend
          image: akajcn/backend-guess:latest
          resources:
            requests:
              cpu: "0.3"
              memory: "256Mi"
            limits:
              cpu: "0.5"
              memory: "512Mi"
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      

---

# Criacao do service

apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  namespace: ns-guess
spec:
  selector:
    app: guess-backend
  ports:
    - protocol: TCP
      port:  5000
      targetPort: 5000
  type: ClusterIP
