manifests/3-frontend.yml

# Criacao do deploy

apiVersion: apps/v1
kind: Deployment
metadata:
  name: guess-frontend
  namespace: ns-guess
spec:
  selector:
    matchLabels:
      app: guess-frontend
  template:
    metadata:
      labels:
        app: guess-frontend
    spec:
      containers:
        - name: guess-frontend
          image: akajcn/frontend-guess:latest
          ports:
            - containerPort: 3000
          
---

# Criacao do service

apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: ns-guess
spec:
  selector:
    app: guess-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
